Fix: fix dark mode icon blend mode in 2.13.3 (#8166)

--- a/src-ui/src/app/components/document-list/document-card-small/document-card-small.component.scss
+++ b/src-ui/src/app/components/document-list/document-card-small/document-card-small.component.scss
@@ -6,7 +6,6 @@
   object-fit: cover;
   object-position: top left;
   height: 180px;
-  mix-blend-mode: multiply;
 }
 
 .document-card-check {
